# CITS5505-AgileWebDev-GroupProject

./: .env   .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_QUALITY.md  DEPLOYMENT.md  README.md  RELEASE_CHECKLIST.md  Technical_Documentation.md  app.py  dev-requirements.txt  env.example  fix_indentation.py  pyproject.toml  requirements.txt  run.py  run_selenium_tests.py  selenium_tests.py  setup.cfg  setup.py  test_api.py  test_scout_report.txt  test_wemby_report.txt  技术文档.md
.cursor/rules/: 01-project-structure.mdc  02-flask-app-architecture.mdc  03-scout-analysis-module.mdc  04-templates-and-frontend.mdc  05-api-and-utils.mdc  06-technical-specifications.mdc
.github/workflows/: ci-cd.yml
app/: VERSION.py  __init__.py  config.py  extensions.py  test_gemini.py  utils.py  utils_backup.py
app/api/: __init__.py  gemini_analysis.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/dashboard/: __init__.py  routes.py
instance/: site.db
logs/: flask.log.1  flask.log.10  flask.log.2  flask.log.3  flask.log.4  flask.log.5  flask.log.6  flask.log.7  flask.log.8  flask.log.9
migrations/: env.py
requirements/: base.txt  dev.txt  test.txt
scripts/: __init__.py  check_app.py  fix_indentation.py
templates/: dashboard.html  index.html  layout.html  login.html  register.html  share.html  upload.html  visualize.html
tests/: __init__.py  run_testing.py  test_api.py  test_email_verification.py  test_logout.py  test_mock_analysis.py  test_registration.py  test_registration_passowrd_mismatch.py  test_tabs_navigation.py  test_upload_data.py
(+51 files in other folders)
